Fixed ScrollDown icon position on Safari Mobile

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -698,6 +698,10 @@ video {
   margin-bottom: 2.5rem;
 }
 
+.-ml-6 {
+  margin-left: -1.5rem;
+}
+
 .max-h-screen {
   max-height: 100vh;
 }
@@ -796,6 +800,10 @@ video {
 
 .top-0 {
   top: 0px;
+}
+
+.left-0 {
+  left: 0px;
 }
 
 .bottom-4 {
